fix(analytics): [PLTDA-3018] metrics alignment issue (#5616)

--- a/src/pages/stats/common/components/charts/KeyMetricStat/KeyMetricCellWrapper.less
+++ b/src/pages/stats/common/components/charts/KeyMetricStat/KeyMetricCellWrapper.less
@@ -13,10 +13,6 @@
             border-left: 1px solid var(--neutral-grey-3);
         }
 
-        & > * {
-            text-align: left;
-        }
-
         .label {
             font-weight: 600;
             font-size: 11px;
